# ML-2024-2025

./: .gitignore  Lab01_PCA.ipynb  README.md  a.txt  pyproject.toml
.ipynb_checkpoints/: Lab01_PCA-checkpoint.ipynb  README-checkpoint.md
.virtual_documents/Lab1/: Homework01.ipynb  Lab01_PCA.ipynb  Untitled.ipynb
.virtual_documents/Lab2/: Lab02_clustering.ipynb
Lab1/: Homework01.ipynb  Lab01_PCA.ipynb
Lab1/.ipynb_checkpoints/: Homework01-checkpoint.ipynb  Lab01_PCA-checkpoint.ipynb  oznaka-checkpoint.ipynb
Lab10/: Lab10-convolutional-neural-network-CNN.ipynb
Lab10/.ipynb_checkpoints/: Homework10-checkpoint.ipynb  Lab10-convolutional-neural-network-CNN-checkpoint.ipynb
Lab11/: Homework11.ipynb  Lab11-autoencoders.ipynb
Lab12/: Homework12.ipynb  Lab12-NLP-towards-attention.ipynb  Untitled.ipynb
Lab12/.ipynb_checkpoints/: Homework12-checkpoint.ipynb  Lab12-NLP-towards-attention-checkpoint.ipynb
Lab13/: Homework13.ipynb  Lab13-towards-self-attention.ipynb
Lab13/.ipynb_checkpoints/: Homework13-checkpoint.ipynb  Lab13-towards-self-attention-checkpoint.ipynb
Lab2/: Homework02.ipynb  Lab02_clustering.ipynb
Lab2/.ipynb_checkpoints/: Homework02-checkpoint.ipynb  Lab02_clustering-checkpoint.ipynb
Lab3/: Homework03.ipynb  Lab03_regression.ipynb
Lab4/: Homework04.ipynb  Lab04_penalized-regression.ipynb  tests.ipynb
Lab5/: Homework05.ipynb  Lab05_kernel-methods.ipynb  Untitled.ipynb
Lab6/: Homework06.ipynb  Lab06_tree-methods.ipynb
Lab7/: Homework07.ipynb  Lab07_gradient-boosting.ipynb
Lab8/: Homework08.ipynb
Lab9/: Homework09.ipynb
(+8 files in other folders)
